fix result text spacing on mobile

--- a/style.css
+++ b/style.css
@@ -307,6 +307,28 @@ h1 {
         justify-items: center;
         grid-template-rows: 130px 1fr;
     }
+
+    .game-selections {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 100px;
+    }
+
+    .game-selections .game-result {
+        grid-row: 2 / 3;
+        grid-column: 1 / -1;
+    }
+
+    .game-selections .game-result-title {
+        font-size: 56px;
+    }
+
+    .game-selections .btn-restart {
+        width: 200px;
+        margin: 0px auto;
+        font-size: 16px;
+        padding: 15px;
+    }
     
     .game-selections .game-choice__inner {
         width: 100px;
